	* Changed channel capabilities to use a comma to separate the
	channel from the capability instead of a period.  This is because
	channels can include periods (but not commas) and since we now
	allow "plugin.command" capabilities, there's no way to know
	whether a given dot is separating the channel from the capability
	or the plugin from the command.
	
	* Removed Status.bestuptime, since it was buggy and no one felt
	like maintaining it.
	
	* Added Http.cyborg, a fun little command for getting cyborg
	abbreviations for names.
	
	* Added Sourceforge.totalbugs and Sourceforge.totalrfes

	* Removed Admin.setprefixchar, since it's unneeded with the new
	configuration.
	
	* Changed the reply method of the irc object given to plugins not
	to require a msg object.
	
	* Removed Owner.{set,unset} since they matter not.
	
	* Made the smileys and frowns configurable in ChannelDB.

	* Added an INVITE handler in Admin, allowing users with the admin
	capability to INVITE the bot to a channel.  There's also a config
	variable, alwaysJoinOnInvite, that will cause the bot to join
	a channel whenever someone invites it to a channel, not just users
	with the admin capability.

	* Added a vast array of new configurables -- check out the various
	config commands in Configurable plugins to see.
	
	* Updated almost every document we have, and added a
	GETTING_STARTED document.  Yay!
	
	* Added several new options for Channel.kban: --exact, --nick,
	--user, --host, for more flexibility in determining what the
	banmask is.
	
	* Added better error reporting for Admin.join, explaining to the
	user if the bot can't join the channel.
	
	* Added a title-snarfer to the URL plugin.
	
	* Changed Note.get to simply be "note".  Instead of "note get
	145", you should use "note 145".
	
	* Added a Scheduler plugin for scheduling events to occur at
	specific times.

	* Added a Herald plugin for announcing to the channel the arrival
	of certain users.
	