@@ -70,7 +70,7 @@ if sqlite is not None:
             _ = self.getMsg(' ')
             self.assertNotError('note send inkedmn 1,2,3')
             _ = self.getMsg(' ')
-            self.assertRegexp('note list --sent', r'#2.*#1')
+            self.assertRegexp('note list --sent', r'#1.*#2')
             self.assertRegexp('note list', r'#1.*#2')
             self.assertRegexp('note 1', 'testing')
             self.assertResponse('note list --old', '#1 from inkedmn')
