@@ -1,3 +1,5 @@
+	* Added --{from,to} and --sent options to Note.sent.
+
 	* Changed channel capabilities to use a comma to separate the
 	channel from the capability instead of a period.  This is because
 	channels can include periods (but not commas) and since we now
